--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -10,6 +10,8 @@ html {
 
 body {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 1.6rem;
+  line-height: 1.6;
+  color: $color-grey-dark;
 }
