--- a/assets/scss/_helpers.scss
+++ b/assets/scss/_helpers.scss
@@ -4,6 +4,10 @@
   margin-right: auto;
   padding-left: 1.8rem;
   padding-right: 1.8rem;
+
+  &--narrow {
+    max-width: 750px;
+  }
 }
 
 .mx-auto {
