--- a/assets/scss/_page-front.scss
+++ b/assets/scss/_page-front.scss
@@ -8,9 +8,10 @@
 }
 
 .site-title {
-  font-size: 7rem;
-  font-family: "Josefin Sans";
+  font-family: "Josefin Sans", sans-serif;
   font-weight: 300;
+  font-size: 7rem;
+  line-height: 1;
   color: $color-primary;
 }
 
@@ -20,14 +21,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
+  margin-top: 3.5rem;
 
   &__input {
     display: block;
     width: 100%;
     margin-bottom: 3rem;
     padding: 1.5rem 1.8rem;
-    font-family: inherit;
     font-size: 1.8rem;
     background: #fff;
     color: inherit;
@@ -47,7 +47,6 @@
     background: $color-primary;
     color: white;
     padding: 1rem 3rem;
-    font-family: inherit;
     font-size: 1.6rem;
     border-radius: 3px;
     border-color: transparent;
@@ -57,7 +56,7 @@
 
     &:hover,
     &:focus {
-      background: lighten($color-primary, 10);
+      background: lighten($color-primary, 12);
     }
   }
 }
