--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 // Colors
 $color-primary: hsl(219, 63%, 16%);
 $color-secondary: hsl(48, 100%, 67%);
+$color-tertiary: hsl(240, 100%, 99%);
 $color-grey-dark: hsl(0, 0%, 20%);
-$color-grey-light: hsl(0, 0%, 92%);
+$color-grey-light: hsl(0, 0%, 96%);
