--- a/assets/scss/_page-search.scss
+++ b/assets/scss/_page-search.scss
@@ -54,13 +54,13 @@
   &__tab {
     display: inline-block;
     margin-right: 1.5rem;
-    padding-bottom: 3px;
+    padding-bottom: 0.5rem;
     font-size: 1.5rem;
     color: $color-grey-dark;
     text-decoration: none;
 
     &:hover {
-      color: hsl(0, 0%, 0%);
+      color: black;
     }
 
     &--active {
