--- a/assets/scss/_page-search.scss
+++ b/assets/scss/_page-search.scss
@@ -100,4 +100,15 @@
     color: $color-grey-medium;
     word-break: break-all;
   }
+
+  &__item--image {
+    margin-bottom: 1rem;
+
+    img {
+      display: block;
+      max-width: 241px;
+      min-width: 50px;
+      border: 1px solid rgba(0, 0, 0, 0.02);
+    }
+  }
 }
